tg-7724 [FE Mejora] Visualizar las validaciones de la nueva constraseña como cheks por separado

--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
@@ -30,10 +30,31 @@
 							   [type]="hideNewPassword ? 'password' : 'text'"
 							   matInput>
 						<mat-icon matSuffix color="primary" (click)="hideNewPassword = !hideNewPassword">{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-						<mat-error>
-							<span>Debe contener un mínimo de 8 caracteres, y al menos 1 mayúscula, 1 mínuscula y 1 número</span>
-						</mat-error>
 					</mat-form-field>
+				<div class="validation" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+					<div  fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="25px">
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('minlength') || this.form.controls['newPassword'].hasError('required'),
+						'text-valid': !this.form.controls['newPassword'].hasError('minlength') && !this.form.controls['newPassword'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							Mínimo de 8 dígitos
+						</span>
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('mayus') || this.form.controls['newPassword'].hasError('required'),
+						'text-valid': !this.form.controls['newPassword'].hasError('mayus') && !this.form.controls['newPassword'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							Mayúscula
+						</span>
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('min') || this.form.controls['newPassword'].hasError('required'),
+						'text-valid': !this.form.controls['newPassword'].hasError('min') && !this.form.controls['newPassword'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							Mínuscula
+						</span>
+					</div>
+					<span [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('number') || this.form.controls['newPassword'].hasError('required'),
+					'text-valid': !this.form.controls['newPassword'].hasError('number') && !this.form.controls['newPassword'].hasError('required')}">
+						<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+						Número
+					</span>
+				</div>
 			</mat-card-content>
 			<div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="17px">
 			<mat-card-actions>
