--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.scss
@@ -25,3 +25,27 @@ button {
 	 margin-left: 8px;
 	 margin-right: 8px;
 }
+
+.validation {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.125;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+	letter-spacing: normal;
+	margin: -20px 15px 0 0;
+
+	.text-error {
+		color: #BDBDBD;
+	}
+
+	.text-valid {
+		color: #27AE60;
+	}
+}
+
+mat-icon {
+	font-size: 14px;
+	height: 14px;
+	width: 14px;
+	margin-right: 4px;
+}
