--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -174,9 +174,8 @@
 		</app-new-consultation-expansion-section>
 
 		<div #errorsView>
-			<div id="validations" *ngIf="!isValidConsultation() || apiErrors.length > 0">
+			<div id="validations" *ngIf="apiErrors?.length > 0">
 				<mat-card>
-					<mat-error *ngFor="let error of errores" class="mat-body-2">{{ error | translate }}</mat-error>
 					<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
 				</mat-card>
 			</div>
