--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -173,7 +173,7 @@
 			</app-document-section>
 		</app-new-consultation-expansion-section>
 
-		<div #errorsView>
+		<div #apiErrorsView>
 			<div id="validations" *ngIf="apiErrors?.length > 0">
 				<mat-card>
 					<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
