--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
@@ -1,13 +1,17 @@
 form {
   font-size: 14px;
-  padding-top: 30px ;
+  padding-top: 30px;
 }
-mat-label, mat-form-field.mat-form-field {
+
+mat-label,
+mat-form-field.mat-form-field {
   margin-bottom: 6px;
 }
+
 .vaccine-error {
   margin-bottom: 18px;
   font-size: 90%;
+
   div.mat-error {
     margin-bottom: 17px;
   }
