--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
@@ -7,7 +7,7 @@
 
 <div mat-dialog-content>
 
-	<mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedTab" (selectedIndexChange)="setSelectedTab($event)">
+	<mat-tab-group mat-align-tabs="start" [selectedIndex]="selectedTab" (selectedIndexChange)="setSelectedTab($event)">
 		<ng-container *appHasRole="['ENFERMERO']">
 			<ng-container *ngIf="this.data.hasConfirmedAppointment">
 				<mat-tab>
