tg-7963 [FE] Salta el primer paso de busqueda de paciente cuando el mismo viene precargado

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -5,8 +5,8 @@
 
 <div mat-dialog-content>
 
-	<mat-horizontal-stepper [linear]="true" #stepper labelPosition="bottom">
-		<mat-step [stepControl]="formSearch" label="{{'turnos.new-appointment.STEP_1' | translate}}">
+	<mat-horizontal-stepper  [selectedIndex]="initialIndex" #stepper labelPosition="bottom">
+		<mat-step  [stepControl]="formSearch" label="{{'turnos.new-appointment.STEP_1' | translate}}">
 			<mat-card class="mat-typography">
 				<form [formGroup]="formSearch" (ngSubmit)="search()">
 					<mat-card-content>
