tg-7827 [FE] Se agrega la acción "Rechazar"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/dialogs/register-nursing-record/register-nursing-record.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/dialogs/register-nursing-record/register-nursing-record.component.html
@@ -42,9 +42,12 @@
         </form>
     </mat-dialog-content>
 
-    <mat-dialog-actions align="center">
+    <mat-dialog-actions fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
         <button mat-flat-button color="primary" (click)="save()">
             {{ 'indicacion.nursing-care.buttons.REGISTER' | translate | uppercase }}
+        </button>
+        <button mat-stroked-button color="warn" class="reject" (click)="reject()">
+            {{ 'indicacion.nursing-care.dialogs.reject.TITLE' | translate | uppercase }}
         </button>
     </mat-dialog-actions>
 </div>
