--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
@@ -26,7 +26,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.heartRate.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'heartRate')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.heartRateError$ | async }}
                         </mat-error>
                     </div>
@@ -48,7 +48,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.respiratoryRate.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'respiratoryRate')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.respiratoryRateError$ | async }}
                         </mat-error>
                     </div>
@@ -73,7 +73,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.temperature.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'temperature')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.temperatureError$ | async }}
                         </mat-error>
                     </div>
@@ -96,7 +96,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.bloodOxygenSaturation.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'bloodOxygenSaturation')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.bloodOxygenSaturationError$ | async }}
                         </mat-error>
                     </div>
@@ -123,7 +123,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.systolicBloodPressure.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'systolicBloodPressure')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.systolicBloodPressureError$ | async }}
                         </mat-error>
                     </div>
@@ -148,7 +148,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.diastolicBloodPressure.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'diastolicBloodPressure')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.diastolicBloodPressureError$ | async }}
                         </mat-error>
                     </div>
@@ -173,7 +173,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.bloodGlucose.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'bloodGlucose')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.bloodGlucoseError$ | async }}
                         </mat-error>
                     </div>
@@ -196,7 +196,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.glycosylatedHemoglobin.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'glycosylatedHemoglobin')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.glycosylatedHemoglobinError$ | async }}
                         </mat-error>
                     </div>
@@ -221,7 +221,7 @@
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.cardiovascularRisk.effectiveTime"
                             (update)="factoresDeRiesgoFormService.setRiskFactorEffectiveTime($event, 'cardiovascularRisk')">
                         </app-effective-time>
-                        <mat-error *ngIf="showErrors">
+                        <mat-error>
                             {{ factoresDeRiesgoFormService.cardiovascularRiskError$ | async }}
                         </mat-error>
                     </div>
