--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -119,7 +119,7 @@
 			<app-factores-de-riesgo-form
 				[showPreloadData]="factoresDeRiesgoFormService.getShowPreloadedRiskFactorsData()"
 				[showRecomendation]="true" [factoresDeRiesgoFormService]="factoresDeRiesgoFormService"
-				[showTitle]="false" [showErrors]="true">
+				[showTitle]="false">
 			</app-factores-de-riesgo-form>
 
 		</app-new-consultation-expansion-section>
