--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
@@ -1,7 +1,8 @@
 <app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'internaciones.anamnesis.TITLE' }">
 	<form body id="anamnesis-form" (keydown.enter)="false" [formGroup]="form">
 		<div id="diagnosticos">
-			<app-diagnosticos [(mainDiagnosis)]="mainDiagnosis" [(diagnosticos)]="diagnosticos" [type]="'ANAMNESIS'"></app-diagnosticos>
+			<app-diagnosticos [(mainDiagnosis)]="mainDiagnosis" [(diagnosticos)]="diagnosticos" [type]="'ANAMNESIS'">
+			</app-diagnosticos>
 		</div>
 
 		<div id="procedimientos"
@@ -137,8 +138,7 @@
 			<app-medicacion [(medications)]="medications"></app-medicacion>
 		</div>
 		<div id="factores-de-riesgo">
-			<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService"
-				[showErrors]="true">
+			<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
 			</app-factores-de-riesgo-form>
 		</div>
 		<div id="observations">
@@ -208,7 +208,8 @@
 	</form>
 	<div actions id="buttons" align="end">
 		<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-			*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']" (click)="save()" [disabled]="isDisableConfirmButton">
+			*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']" (click)="save()"
+			[disabled]="isDisableConfirmButton">
 			<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.CONFIRM'"></span>
 		</button>
 	</div>
