tg-8266 Agrego web components en el tab de HC

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -303,6 +303,15 @@
 								(consultationCompleted)="updateFields($event)"></app-odontogram>
 						</ng-template>
 					</mat-tab>
+					<mat-tab *ngFor="let extensionWCTab of extensionWCTabs" [id]="extensionWCTab.title">
+						<ng-template mat-tab-label>
+							<span>{{extensionWCTab.title | uppercase}}</span>
+						</ng-template>
+						<ng-template matTabContent>
+							<app-ui-external-component [params]="extensionWCTab">
+							</app-ui-external-component>
+						</ng-template>
+					</mat-tab>
 
 				</mat-tab-group>
 			</mat-card-content>
