--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
@@ -16,3 +16,8 @@ mat-form-field.mat-form-field {
     margin-bottom: 17px;
   }
 }
+
+.search .mat-form-field-suffix {
+  align-self: center;
+  top: 0.09em;
+}
