--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.html
@@ -25,11 +25,22 @@
             <div>
                 <strong [class]="record.content.status.cssClass" class="label">{{ record.content.status.description | translate | uppercase }}</strong>
             </div>
-            <div *ngIf="record.content.status.type == PENDING">
+            <div *ngIf="record.content.status.type == PENDING" else undoAction>
                 <button mat-button mat-raised-button color="primary" (click)="openDialogToRegister(record)">
                     {{ 'indicacion.nursing-care.buttons.TO_REGISTER' | translate | uppercase }}
                 </button>
             </div>
+
+            <ng-container *appHasRole="['ENFERMERO']">
+                <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="record.content.status.type != PENDING">
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="undoActionOfNRecord(record.id)">
+                        <span [translate]="'indicacion.nursing-care.buttons.UNDO'"></span>
+                    </button>
+                </mat-menu>
+            </ng-template>
         </div>
     </div>
 </div>
